Fixed the beer info right block to bottom align

--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -32,3 +32,15 @@
     @content;
   }
 }
+
+@mixin bottom-align-beer-small {
+  @media only screen and (max-width: 1200px) and (min-width: 991px){
+    @content;
+  }
+}
+
+@mixin bottom-align-large-screen {
+  @media only screen and (min-width: 992px) {
+    @content;
+  }
+}
